tests/istio_testcases/example_policies/testcase2/testcase2-policy-5.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-source-namespaces-only-2
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: ["*"]
    to:
    - operation:
        ports: ["26257", "30"]
    when:
    - key: destination.port
      values: ["26257"]
